inline matplotlib plots

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,6 @@ venv.bak/
 .mypy_cache/
 
 /assign1/titanic/results/
+/assign2/data/
+/assign2/test_set_VU_DM_2014.csv
+/assign2/training_set_VU_DM_2014.csv
